Fixed CSS bug on smaller screens; deleted uselss constructors

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Cuprum');
+
 body {
   background-color: azure;
+  font-family: Cuprum, Lucida Grande, sans-serif;
 }
 
 .App {
   text-align: center;
-  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 header {
   background-color: sienna;
   color: white;
-  font-family: Lucida Grande, sans-serif;
   border-bottom: 1px solid grey;
 }
 
@@ -30,6 +30,7 @@ h1 {
 #drum-machine {
   justify-content: center;
   align-self: center;
+  padding-bottom: 0;
 }
 
 .drum-pad {
@@ -64,6 +65,7 @@ audio {
 #display {
   background-color: sienna;
   color: white;
+  min-width: 300px;
   margin: 10px 0;
   border: 1px solid grey;
   border-radius: 5px;
@@ -77,7 +79,7 @@ audio {
   }
 
   #drum-machine {
-    padding: 50px;
+    padding: 50px 50px 0 50px;
   }
 
   .drum-pad {
@@ -105,13 +107,14 @@ audio {
   .drum-pad {
     grid-template-rows: 2fr 1fr;
     font-size: 0;
+    justify-content: center;
   }
   .pad-icon {
     max-width: 20vw;
   }
 
   #drum-machine {
-    padding: 15px;
+    padding: 15px 15px 0 15px;
   }
 
   #display {
@@ -130,7 +133,15 @@ audio {
   }
 
   #display {
-    font-size: 0.7em;
+    font-size: 0.5em;
     padding: 3px;
+  }
+
+  .drum-pad {
+    border-top: 1px solid #eeefff;
+    border-left: 1px solid #eee;
+    border-right: 1px solid grey;
+    border-bottom: 1px solid grey;
+    justify-content: center;
   }
 }
